--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rick and morty app</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>App de rick y morty con js</h1>
-        <ul></ul>
+    <div class="container mt-5">
+        <div id="Login">
+            <div id="mensaje"></div>
+            <form id="formLogin">
+                <div class="form-group">
+                    <label for="user">Usuario</label>
+                    <input type="text" id="user" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="pass">Contraseña</label>
+                    <input type="password" id="pass" class="form-control">
+                </div>
+                <input type="submit" value="Ingresar" class="btn btn-dark btn-block">
+            </form>
+        <div id="link" class="mt-2">
+            <a href="./registro.html">Ir a registro</a>
+
+        </div>
+        </div>
     </div>
-    <script src="app.js"></script>
+    <script src="./JS/utilidades.js"></script>
+    <script src="./JS/index.js"></script>
 </body>
 </html>
