--- a/index.html
+++ b/index.html
@@ -1,35 +1,57 @@
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <title>Rick And Morty JS</title>
 </head>
-<body>
-    <div class="container mt-5">
-        <div id="Login">
-            <div id="mensaje"></div>
-            <form id="formLogin">
-                <div class="form-group">
-                    <label for="user">Usuario</label>
-                    <input type="text" id="user" class="form-control">
+<body class="bg-dark text-light">
+    <div class="container">
+        <div class="row">
+            <nav class="navbar bg-dark border rounded-3">
+                <div class="container-fluid">
+                  <a class="navbar-bran" style="color: white;">Rick y Morty App JavaScript</a>
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Busqueda" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                  </form>
                 </div>
-                <div class="form-group">
-                    <label for="pass">Contraseña</label>
-                    <input type="password" id="pass" class="form-control">
-                </div>
-                <input type="submit" value="Ingresar" class="btn btn-dark btn-block">
-            </form>
-        <div id="link" class="mt-2">
-            <a href="./registro.html">Ir a registro</a>
-
+              </nav>
         </div>
+        <div class="row">
+        <hr>
+        <h1>App de Rick & Morty con JS</h1>
+        <hr>
         </div>
+    <div class="row d-grid gap-2" id="botones">  
+            <button class="btn btn-outline-success btn-lg" id="prev" data-id>Anterior</button>
+            <button class="btn btn-outline-primary btn-lg" id="next" data-id>Siguiente</button>
     </div>
-    <script src="./JS/utilidades.js"></script>
-    <script src="./JS/index.js"></script>
+    <div class="row" id="characters"></div>
+
+  <!--Modal-->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" 
+   aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content bg-dark text-success">
+        <div class="modal-header">
+          <h5 class="modal-title " id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
 </body>
-</html>
+</html> html>
