--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row">
             <nav class="navbar bg-dark border rounded-3">
                 <div class="container-fluid">
-                  <a class="navbar-bran" style="color: white;">Rick y Morty App JavaScript</a>
+                  <a class="navbar-bran" style="color: rgb(255, 0, 0);">Rick y Morty App JavaScript</a>
                   <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Busqueda" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
