--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <title>Ricky and Morty App JS</title>
+    <title style="color: rgb(255, 0, 98);"> Ricky and Morty App JS</title>
 </head>
 <body class="bg-dark text-light">
     <div class="container">
     <div class="row">
         <nav class="navbar bg-dark border rounder-3">
             <div class="container-fluid">
-              <a class="navbar-brand" style="color: white;">Navbar</a>
-              <form class="d-flex" role="search">
+              <a class="navbar-brand" style="color: rgb(0, 217, 255);">Holaaa bienvenudo :3 </a>
+              <form style="color: rgb(0, 217, 255);" class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
@@ -22,11 +22,11 @@
     </div>
     <div class="row">
     
-        <h1>App de Ricki & Morty con JavaScript</h1>
+        <h1 style="color: rgb(0, 255, 13);">App de Ricki & Morty con JavaScript</h1>
     </div>
     <div class="row d-grid grap-2" id="botones">
-            <button class="btn btn-outline-success btn-lg" id="prev" data-id>Anterior</button>
-            <button class="btn btn-outline-success btn-lg" id="next" data-id>Siguiente</button>
+            <button class="btn btn-outline-success btn-lg" style="color: rgb(255, 251, 4);" id="prev" data-id>Anterior</button>
+            <button class="btn btn-outline-success btn-lg" style="color: rgb(174, 0, 255);" id="next" data-id>Siguiente</button>
         </div>
 
     <div class="row" id="characters"></div>
@@ -35,17 +35,17 @@
     </div>  
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog bg-dark">
-          <div class="modal-content bg-dark text-success">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <div class="modal-dialog bg-dark" style="color: rgb(255, 0, 0);">
+          <div class="modal-content bg-dark text-success" style="color: rgb(255, 0, 0);">
+            <div style="color: rgb(0, 217, 255);" class="modal-header" style="color: rgb(255, 0, 0);">
+              <h5 class="modal-title" style="color: rgb(47, 0, 255);" id="exampleModalLabel">Modal title</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
               ...
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" style="color: rgb(0, 217, 255);" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
@@ -53,7 +53,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js">
 
       </script>
-    <script src="app.js"></script>
+    <script src="/JS/app.js" type="module"></script>
 
 
 </body>
